TestSuite/errors/err0203.pas
uses System, System.Runtime.InteropServices;

type 

[StructLayout(LayoutKind.&Explicit)]
TRec = record
a : integer;
end;

begin
  
end.